--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@ Proactively reported errors by monitoring live KPIs, ensuring timely resolution.
                     <h3>Customer Behavioural & Sales Analysis – Power BI</h3>
                     <p>Interactive Power BI Dashboard of Customer Behavioural according to region & Offers using Pandas.</p>
                 </li>
+                <li>
+                    <h3><a class='pptx_link' href="Financial Tracker BI Report.pptx">Quantitative Business Intelligence Report</h3>
+                    Interactive Power BI Summarized Report to Analyze the essentials.
+                </li>
             </ul>
         </div>
     </section>
