--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Proactively reported errors by monitoring live KPIs, ensuring timely resolution.
                 </li>
                 <li>
                     <h3><a class='pptx_link' href="Financial Tracker BI Report.pptx">Quantitative Business Intelligence Report</h3>
-                    Interactive Power BI Summarized Report to Analyze the essentials.
+                    <p>Interactive Power BI Summarized Report to Analyze the essentials.</p>
                 </li>
             </ul>
         </div>
