--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@ Proactively reported errors by monitoring live KPIs, ensuring timely resolution.
                 <li>
                     <h3>Spotify Playlist Creator using Spotipy</h3>
                     <p>Leveraged the Spotipy module and web scraping tools to create a custom playlist generator.</p>
+                    
                 </li>
                 <li>
                     <h3>E-Commerce Financial Services Website – Odoo</h3>
@@ -121,10 +122,49 @@ Proactively reported errors by monitoring live KPIs, ensuring timely resolution.
                 <li>
                     <h3>Customer Behavioural & Sales Analysis – Power BI</h3>
                     <p>Interactive Power BI Dashboard of Customer Behavioural according to region & Offers using Pandas.</p>
+                    <p>
+                        <ul>
+                            <b>Objective:</b> Develop a tool to generate custom playlists based on user preferences and trends.
+                        </ul>
+                        <ul>
+                            <b>Technology Used:</b> Utilized the Spotipy module for accessing Spotify's API and web scraping tools for gathering data.
+                        </ul>
+                        <ul>
+                            <b>Features:</b> Allows users to input criteria like favorite genres, artists, or moods to generate tailored playlists.
+                        </ul>
+                        <ul>
+                            <b>Data Collection:</b> Gathers music data such as track popularity, artist information, and genre classifications.
+                        </ul>
+                        <ul>
+                            <b>
+                                Outcome: Provides users with personalized playlists that match their music tastes and preferences.
+                            </b>
+                        </ul>
+                    </p>
                 </li>
                 <li>
-                    <h3><a class='pptx_link' href="Financial Tracker BI Report.pptx">Quantitative Business Intelligence Report</h3>
+                    <h3><a class='pptx_link' href="Financial Tracker BI Report.pptx"></a>Quantitative Business Intelligence Report</h3>
                     <p>Interactive Power BI Summarized Report to Analyze the essentials.</p>
+                </li>
+                <li>
+                    <h3><a class='QVI_Customer_Behaviour' href="QVI Customer Behavior Sales Analysis.pptx"></a>QVI Customer Behavior Sales Analysis</h3>
+                    <p>
+                        <ul>
+                            <b>Objective:</b> Analyze customer purchasing behavior and sales trends to identify key factors influencing sales performance.
+                        </ul>
+                        <ul>
+                            <b>Data Source:</b> Utilizes sales data from QVI, including transaction records, customer demographics, and product details.
+                        </ul>
+                        <ul>
+                            <b>Key Metrics:</b> Focuses on metrics such as average transaction value, purchase frequency, and customer segmentation.
+                        </ul>
+                        <ul>
+                            <b>Insights:</b> Aims to uncover patterns and insights that can inform marketing strategies, product offerings, and customer engagement efforts.
+                        </ul>
+                        <ul>
+                            <b>Outcome:</b> Provides actionable recommendations to enhance sales and improve customer satisfaction.
+                        </ul>
+                    </p>
                 </li>
             </ul>
         </div>
