--- a/index.html
+++ b/index.html
@@ -110,62 +110,80 @@ Proactively reported errors by monitoring live KPIs, ensuring timely resolution.
         <div class="container">
             <h2>Projects</h2>
             <ul>
+                <div>
                 <li>
                     <h3>Spotify Playlist Creator using Spotipy</h3>
                     <p>Leveraged the Spotipy module and web scraping tools to create a custom playlist generator.</p>
-                    
+                    <p>
+                        <ul>
+                            <li>
+                                <b>Objective:</b> Develop a tool to generate custom playlists based on user preferences and trends.
+                            </li>
+                            <li>
+                                <b>Technology Used:</b> Utilized the Spotipy module for accessing Spotify's API and web scraping tools for gathering data.
+                            </li>
+                            <li>
+                                <b>Features:</b> Allows users to input criteria like favorite genres, artists, or moods to generate tailored playlists.
+                            </li>
+                            <li>
+                                <b>Data Collection:</b> Gathers music data such as track popularity, artist information, and genre classifications.
+                            </li>
+                            <li>
+                                <b>Outcome:</b> Provides users with personalized playlists that match their music tastes and preferences.
+                            </li>
+                        </ul>
+                    </p>
                 </li>
+                </div>
+                <div>
                 <li>
                     <h3>E-Commerce Financial Services Website – Odoo</h3>
                     <p>AI Integrated Static Financial Website using HTML, CSS, and JavaScript.</p>
+                    <p>
+                        <ul>
+                            <li><strong>Objective:</strong> Develop a static website for e-commerce financial services, integrated with AI features.</li>
+                            <li><strong>Technology Used:</strong> Built using HTML, CSS, and JavaScript for the frontend, with Odoo as the backend platform.</li>
+                            <li><strong>AI Integration:</strong> Incorporates AI tools for enhanced user experience, such as personalized recommendations and financial analytics.</li>
+                            <li><strong>Features:</strong> Provides services like financial planning, investment advice, and transaction management.</li>
+                            <li><strong>Outcome:</strong> A user-friendly platform that offers comprehensive financial services and insights to e-commerce businesses.</li>
+                        </ul>
+                    </p>
                 </li>
+                </div>
+                <div>
                 <li>
                     <h3>Customer Behavioural & Sales Analysis – Power BI</h3>
                     <p>Interactive Power BI Dashboard of Customer Behavioural according to region & Offers using Pandas.</p>
-                    <p>
-                        <ul>
-                            <b>Objective:</b> Develop a tool to generate custom playlists based on user preferences and trends.
-                        </ul>
-                        <ul>
-                            <b>Technology Used:</b> Utilized the Spotipy module for accessing Spotify's API and web scraping tools for gathering data.
-                        </ul>
-                        <ul>
-                            <b>Features:</b> Allows users to input criteria like favorite genres, artists, or moods to generate tailored playlists.
-                        </ul>
-                        <ul>
-                            <b>Data Collection:</b> Gathers music data such as track popularity, artist information, and genre classifications.
-                        </ul>
-                        <ul>
-                            <b>
-                                Outcome: Provides users with personalized playlists that match their music tastes and preferences.
-                            </b>
-                        </ul>
-                    </p>
                 </li>
+                </div>
+                <div>
                 <li>
-                    <h3><a class='pptx_link' href="Financial Tracker BI Report.pptx"></a>Quantitative Business Intelligence Report</h3>
+                    <h3 class='pptx_link'><a href="Financial Tracker BI Report.pptx" target="_blank">Quantitative Business Intelligence Report</a></h3>
                     <p>Interactive Power BI Summarized Report to Analyze the essentials.</p>
                 </li>
+                </div>
+                <div>
                 <li>
-                    <h3><a class='QVI_Customer_Behaviour' href="QVI Customer Behavior Sales Analysis.pptx"></a>QVI Customer Behavior Sales Analysis</h3>
+                    <h3 class='QVI_Customer_Behaviour'><a href="QVI Customer Behavior Sales Analysis.pptx" target="_blank">QVI Customer Behavior Sales Analysis</a></h3>
                     <p>
-                        <ul>
+                        <li>
                             <b>Objective:</b> Analyze customer purchasing behavior and sales trends to identify key factors influencing sales performance.
-                        </ul>
-                        <ul>
+                        </li>
+                        <li>
                             <b>Data Source:</b> Utilizes sales data from QVI, including transaction records, customer demographics, and product details.
-                        </ul>
-                        <ul>
+                        </li>
+                        <li>
                             <b>Key Metrics:</b> Focuses on metrics such as average transaction value, purchase frequency, and customer segmentation.
-                        </ul>
-                        <ul>
+                        </li>
+                        <li>
                             <b>Insights:</b> Aims to uncover patterns and insights that can inform marketing strategies, product offerings, and customer engagement efforts.
-                        </ul>
-                        <ul>
+                        </li>
+                        <li>
                             <b>Outcome:</b> Provides actionable recommendations to enhance sales and improve customer satisfaction.
-                        </ul>
+                        </li>
                     </p>
                 </li>
+                </div>
             </ul>
         </div>
     </section>
